applications update
